ViewModelの作成まで

--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".ui.createGroup.CreateGroupFragment">
+  xmlns:tools="http://schemas.android.com/tools">
+  <data>
+    <variable
+      name="viewModel"
+      type="work.calmato.prestopay.ui.addFriend.AddFriendViewModel"/>
+  </data>
   <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -32,7 +35,7 @@
     </RadioGroup>
 
     <EditText
-      android:id="@+id/editTextTextPersonName2"
+      android:id="@+id/userName"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
@@ -50,7 +53,7 @@
       android:layout_marginTop="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">
+      app:layout_constraintTop_toBottomOf="@+id/userName">
 
       <ImageView
         android:id="@+id/imageView"
@@ -89,10 +92,10 @@
       android:layout_width="50dp"
       android:layout_height="0dp"
       android:layout_marginEnd="16dp"
-      app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
+      app:layout_constraintBottom_toBottomOf="@+id/userName"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
+      app:layout_constraintTop_toTopOf="@+id/userName"
       app:srcCompat="@drawable/ic_baseline_search_24" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</layout>
