サムネの表示

--- a/native/android/app/src/main/res/layout/list_item_name_thumbnail.xml
+++ b/native/android/app/src/main/res/layout/list_item_name_thumbnail.xml
@@ -23,7 +23,8 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/circle_theme_color" />
+      app:srcCompat="@drawable/circle_theme_color"
+      app:thumbnail="@{userProperty}"/>
 
     <TextView
       android:id="@+id/userName"
