--- a/native/android/app/src/main/res/layout/list_item_name_thumbnail.xml
+++ b/native/android/app/src/main/res/layout/list_item_name_thumbnail.xml
@@ -32,12 +32,22 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
-      tools:text="userName"
       android:textSize="24sp"
       app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/addButton"
       app:layout_constraintStart_toEndOf="@+id/thumbnail"
       app:layout_constraintTop_toTopOf="@+id/thumbnail"
-      app:username="@{userProperty}"/>
+      app:username="@{userProperty}"
+      tools:text="userName" />
+
+    <Button
+      android:id="@+id/addButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
+      android:text="追加"
+      app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/thumbnail" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
