友達一覧の表示

--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -6,7 +6,7 @@
   <data>
     <variable
       name="viewModel"
-      type="work.calmato.prestopay.ui.addFriend.AddFriendViewModel"/>
+      type="work.calmato.prestopay.util.ViewModelFriendGroup"/>
   </data>
   <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
       android:layout_height="match_parent">
