--- a/native/android/app/src/main/res/layout/dialog_add_friend.xml
+++ b/native/android/app/src/main/res/layout/dialog_add_friend.xml
@@ -9,12 +9,12 @@
     android:id="@+id/thumbnail_dialog"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="24dp"
     android:layout_marginTop="24dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="24dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView7"
+    app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@drawable/circle_theme_color" />
 
   <TextView
@@ -22,19 +22,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
+    android:layout_marginBottom="24dp"
     android:text="TextView"
     android:textSize="24sp"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="@+id/thumbnail_dialog"
     app:layout_constraintStart_toStartOf="@+id/thumbnail_dialog"
     app:layout_constraintTop_toBottomOf="@+id/thumbnail_dialog" />
 
-  <TextView
-    android:id="@+id/textView7"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:text="友達追加しますか？"
-    app:layout_constraintEnd_toEndOf="@+id/thumbnail_dialog"
-    app:layout_constraintStart_toStartOf="@+id/thumbnail_dialog"
-    app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
