グループ作成のために友達選択してグループ名にページ遷移するまで

--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -56,11 +56,11 @@
       android:id="@+id/action_home_fragment_to_account_home"
       app:destination="@id/account_home" />
     <action
-      android:id="@+id/action_home_fragment_to_createGroupFragment"
-      app:destination="@id/createGroupFragment" />
-    <action
       android:id="@+id/action_home_fragment_to_groupFriendFragment"
       app:destination="@id/groupFriendFragment" />
+    <action
+      android:id="@+id/action_home_fragment_to_friendListFragment"
+      app:destination="@id/friendListFragment" />
   </fragment>
   <fragment
     android:id="@+id/account_home"
@@ -115,4 +115,13 @@
     android:name="work.calmato.prestopay.ui.addFriend.AddFriendFragment"
     android:label="AddFriendFragment"
     tools:layout="@layout/fragment_add_friend"/>
+  <fragment
+    android:id="@+id/friendListFragment"
+    android:name="work.calmato.prestopay.ui.friendList.FriendListFragment"
+    android:label="FriendListFragment"
+    tools:layout="@layout/fragment_friend_list">
+    <action
+      android:id="@+id/action_friendListFragment_to_createGroupFragment"
+      app:destination="@id/createGroupFragment" />
+  </fragment>
 </navigation>
