--- a/native/android/app/src/main/res/layout/fragment_create_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_group.xml
@@ -2,6 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">
+  <data>
+    <variable
+      name="viewModel"
+      type="work.calmato.prestopay.util.ViewModelFriendGroup" />
+  </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -40,15 +45,19 @@
       app:layout_constraintStart_toEndOf="@+id/thumbnailEdit"
       app:layout_constraintTop_toTopOf="@+id/thumbnailEdit" />
 
-    <ImageView
-      android:id="@+id/imageView2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="32dp"
-      android:src="@drawable/ic_baseline_add_circle_outline_60"
-      app:layout_constraintEnd_toEndOf="@+id/thumbnailEdit"
-      app:layout_constraintStart_toStartOf="@+id/thumbnailEdit"
-      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit" />
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/GridViewFriends"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
