--- a/native/android/app/src/main/res/layout/fragment_create_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_group.xml
@@ -57,7 +57,8 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit"/>
+      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit"
+      app:spanCount="3"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
