グループ作成に成功したらホーム画面に遷移

--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -138,5 +138,8 @@
     <action
       android:id="@+id/action_createGroupFragment_to_friendListFragment"
       app:destination="@id/friendListFragment" />
+    <action
+      android:id="@+id/action_createGroupFragment_to_home_fragment"
+      app:destination="@id/home_fragment" />
   </fragment>
 </navigation>
