user編集も最大文字の制限を追加

--- a/native/android/app/src/main/res/layout/fragment_account_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_edit.xml
@@ -45,6 +45,7 @@
       android:ems="10"
       android:hint="@string/name"
       android:inputType="textPersonName"
+      android:maxLength="31"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/changeProfilePicture" />
@@ -58,6 +59,7 @@
       android:ems="10"
       android:hint="@string/username"
       android:inputType="textPersonName"
+      android:maxLength="31"
       app:layout_constraintEnd_toEndOf="@+id/nameEditText"
       app:layout_constraintStart_toStartOf="@+id/nameEditText"
       app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
@@ -71,6 +73,7 @@
       android:ems="10"
       android:hint="@string/email"
       android:inputType="textEmailAddress"
+      android:maxLength="255"
       app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
       app:layout_constraintStart_toStartOf="@+id/userNameEditText"
       app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />
