--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -134,7 +134,7 @@
     <argument
       android:name="friendsList"
       app:argType="work.calmato.prestopay.network.Users"
-      app:nullable="true" />
+      app:nullable="false" />
     <action
       android:id="@+id/action_createGroupFragment_to_friendListFragment"
       app:destination="@id/friendListFragment" />
