ユーザー情報を各所で表示

--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -77,6 +77,9 @@
     <action
       android:id="@+id/action_account_home_to_account_edit_fragment"
       app:destination="@id/account_edit_fragment" />
+    <action
+      android:id="@+id/action_account_home_to_home_fragment"
+      app:destination="@id/home_fragment" />
   </fragment>
   <fragment
     android:id="@+id/resetPassFragment"
