--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -14,8 +14,8 @@
 
     <ImageView
       android:id="@+id/thumbnail"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
       android:layout_marginStart="32dp"
       android:layout_marginTop="16dp"
       app:layout_constraintStart_toStartOf="parent"
