--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -149,7 +149,7 @@
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/groupRecycle"
       android:layout_width="match_parent"
-      android:layout_height="50dp"
+      android:layout_height="200dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />
@@ -160,6 +160,7 @@
       android:layout_height="wrap_content"
       android:background="#99C1C1C1"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/groupRecycle">
 
