--- a/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +15,7 @@
       android:layout_marginEnd="32dp"
       android:autofillHints=""
       android:ems="10"
-      android:hint="Current Password"
+      android:hint="現在のパスワード"
       android:inputType="textPassword"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -22,75 +23,64 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.30" />
 
-    <TextView
-      android:id="@+id/currentPassText"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="現在のパスワード"
-      android:textColor="@android:color/background_dark"
-      android:textSize="18sp"
-      app:layout_constraintBottom_toTopOf="@+id/currentPassEdit"
-      app:layout_constraintStart_toStartOf="@+id/currentPassEdit" />
-
     <Button
       android:id="@+id/changePassButton"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="32dp"
+      android:layout_marginTop="48dp"
       android:layout_marginEnd="16dp"
       android:background="@color/ourTheme"
       android:text="パスワードの変更"
       android:textColor="@android:color/background_light"
-      app:layout_constraintEnd_toEndOf="@+id/passConfirmEdit"
-      app:layout_constraintStart_toStartOf="@+id/passConfirmEdit"
-      app:layout_constraintTop_toBottomOf="@+id/passConfirmEdit" />
-
-    <TextView
-      android:id="@+id/newPassText"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="新しいパスワード"
-      android:textColor="@android:color/black"
-      android:textSize="18sp"
-      app:layout_constraintBottom_toTopOf="@+id/newPassEdit"
-      app:layout_constraintStart_toStartOf="@+id/newPassEdit" />
+      app:layout_constraintEnd_toEndOf="@+id/passConfirmEditText"
+      app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
+      app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInformation" />
 
     <EditText
-      android:id="@+id/newPassEdit"
+      android:id="@+id/passEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
+      android:autofillHints=""
       android:ems="10"
-      android:hint="New Password"
+      android:hint="新しいパスワード"
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="@+id/currentPassEdit"
       app:layout_constraintStart_toStartOf="@+id/currentPassEdit"
-      app:layout_constraintTop_toBottomOf="@+id/currentPassEdit"
-      android:autofillHints="" />
-
-    <TextView
-      android:id="@+id/passConfirmText"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="新しいパスワードの確認"
-      android:textColor="@android:color/black"
-      android:textSize="18sp"
-      app:layout_constraintBottom_toTopOf="@+id/passConfirmEdit"
-      app:layout_constraintStart_toStartOf="@+id/passConfirmEdit" />
+      app:layout_constraintTop_toBottomOf="@+id/currentPassEdit" />
 
     <EditText
-      android:id="@+id/passConfirmEdit"
+      android:id="@+id/passConfirmEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="32dp"
+      android:layout_marginTop="48dp"
+      android:autofillHints=""
       android:ems="10"
-      android:hint="Confirm Password"
+      android:hint="新しいパスワード(確認用)"
       android:inputType="textPassword"
-      app:layout_constraintEnd_toEndOf="@+id/newPassEdit"
-      app:layout_constraintStart_toStartOf="@+id/newPassEdit"
-      app:layout_constraintTop_toBottomOf="@+id/newPassEdit"
-      android:autofillHints="" />
+      android:maxLength="15"
+      app:layout_constraintEnd_toEndOf="@+id/passEditText"
+      app:layout_constraintStart_toStartOf="@+id/passEditText"
+      app:layout_constraintTop_toBottomOf="@+id/passEditText" />
+
+    <TextView
+      android:id="@+id/passwordInformation"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:text="@string/passwordInformation"
+      app:layout_constraintStart_toStartOf="@+id/passEditText"
+      app:layout_constraintTop_toBottomOf="@+id/passEditText" />
+
+    <TextView
+      android:id="@+id/passwordConfirmInformation"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:text="@string/passwordConfirmInformation"
+      app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
+      app:layout_constraintTop_toBottomOf="@+id/passConfirmEditText" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
