--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -25,7 +25,7 @@
       app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/constraintLayout4"
+      android:id="@+id/inviteConstraint"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
@@ -83,7 +83,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
+      app:layout_constraintTop_toBottomOf="@+id/inviteConstraint" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
