UIスレッドで行うインターネット通信時にNowLoadingを表示させることでユーザーに通信中だと知らせた

--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -82,8 +82,22 @@
       android:layout_marginTop="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/inviteConstraint" />
+      app:layout_constraintTop_toBottomOf="@+id/inviteConstraint"
+      app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+      android:id="@+id/nowLoading"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/now_loading"
+      android:textSize="18sp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/usersRecycleView"
+      app:layout_constraintEnd_toEndOf="@+id/usersRecycleView"
+      app:layout_constraintStart_toStartOf="@+id/usersRecycleView"
+      app:layout_constraintTop_toTopOf="parent" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
