ナビゲーションの追加

--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -110,6 +110,9 @@
     <action
       android:id="@+id/action_groupFriendFragment_to_addFriendFragment"
       app:destination="@id/addFriendFragment" />
+    <action
+      android:id="@+id/action_groupFriendFragment_to_friendListFragment"
+      app:destination="@id/friendListFragment" />
   </fragment>
   <fragment
     android:id="@+id/addFriendFragment"
